--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Guitar Station</h1>
-    <p>Добро пожаловать на Guitar Station</p>
+    <main>
+        <header>
+            <h1>Guitar Station</h1>
+        </header>
+    
 </body>
 </html>
