--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guitar Station</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="./final.css">
 </head>
-<body>
-    <main>
-        <header>
-            <h1>Guitar Station</h1>
-        </header>
-    
-</body>
+    <body>
+        <main>
+            <header>
+                <h1>Guitar Station</h1>
+            </header>
+
+            <section>
+                <p>Добро пожаловать на Guitar Station!</p>
+                
+            </section>
+        </main>
 </html>
