--- a/index.html
+++ b/index.html
@@ -7,14 +7,32 @@
     <link rel="stylesheet" href="./style.css">
 </head>
     <body>
-        <main>
             <header>
                 <h1>Guitar Station</h1>
             </header>
 
+            <div>
+            <nav>
+                <ul>
+                  <li><a href='#'>Главная</a></li>
+                  <li><a href='#'>О сайте</a></li>
+                  <li><a href='#'>Интересно почитать</a></li> <!--Блог-->
+                </ul>
+              </nav>
+            </div>
+
+            <br>
+            <main>
             <section>
+                <div class="curtain">
+                <p>Один гитарист решил написать сайт, в котором будет комфортно абсолютно любому человеку, игрующему на гитаре, и даже тем, кто только хочет начать свой путь в мир музыки.</p>
                 <p>Добро пожаловать на Guitar Station!</p>
-                
+                <p>На сайте вы найдёте:</p>
+                <li class="nahodka"><a class="N">Обзоры гитар и оборудования</a>(каталог интересных и раритетных гитарок)</li>
+                <li class="nahodka"><a class="N">Эволюция гитары</a></li>
+                <li class="nahodka"><a class="N">Истории великих гитаристов.</a></li>
+                <li class="nahodka"><a class="N">Собрание аккордов</a> (которое я буду периодически пополнять, когда вспомню, как они берутся. Пока есть только E, потому что он веселый, как я, когда пишу этот сайт.)</li>
+                </div>
             </section>
         </main>
 </html>
