--- a/index.html
+++ b/index.html
@@ -10,24 +10,20 @@
             <header>
                 <h1>Guitar Station</h1>
             </header>
+            <div class = "menu">
+                <div class = "button"><a>Главная</a></div>
+                <div class = "button"><a>О сайте</a></div>
+                <div class = "button"><a>Интересно почитать</a></div>
+              </div>
 
-            <div>
-            <nav>
-                <ul>
-                  <li><a href='#'>Главная</a></li>
-                  <li><a href='#'>О сайте</a></li>
-                  <li><a href='#'>Интересно почитать</a></li> <!--Блог-->
-                </ul>
-              </nav>
-            </div>
-
+            <br>
             <br>
             <main>
             <section>
                 <div class="curtain">
-                <p>Один гитарист решил написать сайт, в котором будет комфортно абсолютно любому человеку, игрующему на гитаре, и даже тем, кто только хочет начать свой путь в мир музыки.</p>
-                <p>Добро пожаловать на Guitar Station!</p>
-                <p>На сайте вы найдёте:</p>
+                <p class="nahodka">Один гитарист решил написать сайт, в котором будет комфортно абсолютно любому человеку, игрующему на гитаре, и даже тем, кто только хочет начать свой путь в мир музыки.</p>
+                <p class="nahodka">Добро пожаловать на Guitar Station!</p>
+                <p class="nahodka">На сайте вы найдёте:</p>
                 <li class="nahodka"><a class="N">Обзоры гитар и оборудования</a>(каталог интересных и раритетных гитарок)</li>
                 <li class="nahodka"><a class="N">Эволюция гитары</a></li>
                 <li class="nahodka"><a class="N">Истории великих гитаристов.</a></li>
