--- a/index.html
+++ b/index.html
@@ -13,15 +13,24 @@
             <br>
             <div class = "menu">
                 <div class = "button"><a>Главная</a></div>
-                <div class = "button"><a>О сайте</a></div>
                 <div class = "button"><a>Интересно почитать</a></div>
+                <div class = "button"><a>Обратная связь</a></div>
+              </div>
+<br>
+              <div class = "menu1">
+                <div class = "button1"><a>Главная</a></div>
+                <div class = "button1"><a>Интересно почитать</a></div>
+                <div class = "button1"><a>Обратная связь</a></div>
               </div>
 
             <br>
-            <br>
+            <br class="NO">
             <main>
-            <section>
+                <section>
+                <div class="cr">
                 <div class="curtain">
+                    <h2 class="Gl">Главная</h2>
+                    <br>
                 <p class="nahodka">Один гитарист решил написать сайт, в котором будет комфортно абсолютно любому человеку, игрующему на гитаре, и даже тем, кто только хочет начать свой путь в мир музыки.</p>
                 <p class="nahodka">Добро пожаловать на Guitar Station!</p>
                 <p class="nahodka">На сайте вы найдёте:</p>
@@ -30,6 +39,16 @@
                 <li class="nahodka"><a class="N">Истории великих гитаристов.</a></li>
                 <li class="nahodka"><a class="N">Собрание аккордов</a> (которое я буду периодически пополнять, когда вспомню, как они берутся. Пока есть только E, потому что он веселый, как я, когда пишу этот сайт.)</li>
                 </div>
+                <br class="NO">
+                <br class="NO">
+                <br class="NO">
+                <div class="curtain">
+                    <h2 class="Gl">Интересно почитать</h2>
+                    <br>
+                    <p class="nahodka">Также, чтобы быть в курсе изменений и внесения на сайт чего-либо интересного, настоятельно рекомендую периодически заглядывать в раздел</p>
+                    <p class="nahodka"><a class="N">«Новости»</a>😊.</p>
+                    </div>
+                    </div>
             </section>
         </main>
 </html>
