--- a/index.html
+++ b/index.html
@@ -50,5 +50,37 @@
                     </div>
                     </div>
             </section>
+            <br>
+            <br>
+            <br>
+            <section class="order">
+                <form id="order-form" action="">
+                    <h2 class="Mnenie">Поделитесь своим мнением</h2>
+                    <br>
+                    <br>
+                    <p class="nahodka">Если вас посетило внезапное желание помочь, внести свой вклад в развитие сайта или сказать мне приятные слава – заполните пожалуйста форму ниже. Я буду очень рад и благодарен. Заранее большое спасибо!</p>
+                  <br>
+                  <br>
+                    <div class="field">
+                    <input class="input" type = ”text” name = ”login” placeholder = "Ваше имя" required>
+                  </div>
+                  <div class="field">
+                    <input class="input" type = ”text” name="" id="phone" type="tel" placeholder="Что бы вы хотели видеть на сайте">
+                  </div>
+                  <div class="field">
+                    <input class="input" name="email" id="email" type="email" placeholder="Почта">
+                  </div>
+                  <div class="f">
+                    <input class="checkbox" type="checkbox" name="dontcall" id="dontcall">
+                    <label for="dontcall" class="CH">Подписаться на рассылку</label>
+                  </div>
+                  <input type="submit" value="Заказать" class="submit-btn">
+                </form>
+              </section>
+              <br>
+              <br>
+              <footer>
+                <p>Сайт создан @moiseeff_ars with ❤️</p>
+              </footer>
         </main>
 </html>
