--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h2 class="Mnenie">Поделитесь своим мнением</h2>
                     <br>
                     <br>
-                    <p class="nahodka">Если вас посетило внезапное желание помочь, внести свой вклад в развитие сайта или сказать мне приятные слава – заполните пожалуйста форму ниже. Я буду очень рад и благодарен. Заранее большое спасибо!</p>
+                    <p class="nahodka">Если вас посетило внезапное желание помочь, внести свой вклад в развитие сайта или сказать мне приятные слова – заполните пожалуйста форму ниже. Я буду очень рад и благодарен. Заранее большое спасибо!</p>
                   <br>
                   <br>
                     <div class="field">
