--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <input class="checkbox" type="checkbox" name="dontcall" id="dontcall">
                     <label for="dontcall" class="CH">Подписаться на рассылку</label>
                   </div>
-                  <input type="submit" value="Заказать" class="submit-btn">
+                <input type="submit" value="Отправить" class="submit-btn">
                 </form>
               </section>
               <br>
