--- a/404.html
+++ b/404.html
@@ -11,6 +11,9 @@
         <section>
             <div>
                 <h1>404. Страница не найдена</h1>
+                <div class="hom">
+                <img src="https://media1.tenor.com/m/oSKKipnYg5MAAAAd/hamsti-hamster.gif" alt="" width="50%">
+            </div>
                 
                 <p>К сожалению, такой страницы нет. Возможно она удалена или никогда не существовала ранее.</p>
                 <br>
