--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
     <body>
             <header>
-                <h1><a class="G" href="file:///C:/Users/marsa/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/Web/final/final.html">Guitar Station</a></h1>
+                <h1><a class="G" href="https://mars-tech-maker.github.io/final_project/">Guitar Station</a></h1>
             </header>
             <br>
             <div class = "menu">
@@ -34,7 +34,7 @@
                 <p class="nahodka">Один гитарист решил написать сайт, в котором будет комфортно абсолютно любому человеку, игрующему на гитаре, и даже тем, кто только хочет начать свой путь в мир музыки.</p>
                 <p class="nahodka">Добро пожаловать на Guitar Station!</p>
                 <p class="nahodka">На сайте вы найдёте:</p>
-                <li class="nahodka"><a href="file:///C:\Users\marsa\OneDrive\Рабочий стол\Web\final/Obzor.html" class="N">Обзоры гитар и оборудования</a>(каталог интересных и раритетных гитарок)</li>
+                <li class="nahodka"><a href="https://mars-tech-maker.github.io/final_project/Obzor/" class="N">Обзоры гитар и оборудования</a>(каталог интересных и раритетных гитарок)</li>
                 <li class="nahodka"><a href="file:///C:\Users\marsa\OneDrive\Рабочий стол\Web\final/404.html" class="N">Эволюция гитары</a></li>
                 <li class="nahodka"><a href="file:///C:\Users\marsa\OneDrive\Рабочий стол\Web\final/404.html" class="N">Собрание аккордов</a> (которое я буду периодически пополнять, когда вспомню, как они берутся. Пока есть только E, потому что он веселый, как я, когда пишу этот сайт.)</li>
                 </div>
