--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p class="nahodka">Один гитарист решил написать сайт, в котором будет комфортно абсолютно любому человеку, игрующему на гитаре, и даже тем, кто только хочет начать свой путь в мир музыки.</p>
                 <p class="nahodka">Добро пожаловать на Guitar Station!</p>
                 <p class="nahodka">На сайте вы найдёте:</p>
-                <li class="nahodka"><a href="https://mars-tech-maker.github.io/final_project/Obzor/" class="N">Обзоры гитар и оборудования</a>(каталог интересных и раритетных гитарок)</li>
+                <li class="nahodka"><a href="https://mars-tech-maker.github.io/final_project/Obzor.html" class="N">Обзоры гитар и оборудования</a>(каталог интересных и раритетных гитарок)</li>
                 <li class="nahodka"><a href="file:///C:\Users\marsa\OneDrive\Рабочий стол\Web\final/404.html" class="N">Эволюция гитары</a></li>
                 <li class="nahodka"><a href="file:///C:\Users\marsa\OneDrive\Рабочий стол\Web\final/404.html" class="N">Собрание аккордов</a> (которое я буду периодически пополнять, когда вспомню, как они берутся. Пока есть только E, потому что он веселый, как я, когда пишу этот сайт.)</li>
                 </div>
