--- a/Obzor.html
+++ b/Obzor.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1><a class="G" href="file:///C:/Users/marsa/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/Web/final/final.html">Guitar Station</a></h1>
+        <h1><a class="G" href="index.html">Guitar Station</a></h1>
     </header>
     <br>
     <main>
@@ -137,7 +137,7 @@
                 <br>
             </section>
             <div class="knopka">
-            <a href="C:\Users\marsa\OneDrive\Рабочий стол\Web\final\final.html"  class="Glavnaa">На главную</a>
+            <a href="index.html"  class="Glavnaa">На главную</a>
         </div>
         <br>
         <br>
