--- a/News.html
+++ b/News.html
@@ -11,7 +11,7 @@
     <main>
         <header>
             <div class="container">
-            <h1><a class="G" href="file:///C:/Users/marsa/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/Web/final/final.html">Guitar Station</a></h1>
+            <h1><a class="G" href="index.html">Guitar Station</a></h1>
         </div>
             <h2 class="Z">Новости сайта</h2>
         </header>
@@ -23,7 +23,7 @@
                 <div class="c">
                     <h2 class="Gl">28.05.2025</h2>
                     <br>
-                    <p class="nahodka">Запущена страница <a href="file:///C:/Users/marsa/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/Web/final/News.html" class="N"> новостей</a>сайта Guitar Station.</p>
+                    <p class="nahodka">Запущена страница <a href="News.html" class="N"> новостей</a>сайта Guitar Station.</p>
                 </div>
             </div>
             <br>
@@ -34,7 +34,7 @@
                 <div class="c">
                     <h2 class="Gl">27.05.2025</h2>
                     <br>
-                    <p class="nahodka">Запущен собственный <a href="file:///C:/Users/marsa/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/Web/final/Obzor.html" class="N"> гитарный блог.</a></p>
+                    <p class="nahodka">Запущен собственный <a href="Obzor.html" class="N"> гитарный блог.</a></p>
                 </div>
             </div>
             <br>
@@ -43,7 +43,7 @@
             <div class="c">
                 <h2 class="Gl">22.05.2025</h2>
                 <br>
-                <p class="nahodka">Запущена <a href="file:///C:\Users\marsa\OneDrive\Рабочий стол\Web\final/final.html" class="N">главная</a> страница сайта Guitar Station.</p>
+                <p class="nahodka">Запущена <a href="index.html" class="N">главная</a> страница сайта Guitar Station.</p>
             </div>
         </div>
         <br>
@@ -51,7 +51,7 @@
         <br>
         <br>
         <div class="knopka">
-            <a href="C:\Users\marsa\OneDrive\Рабочий стол\Web\final\final.html"  class="Glavnaa">На главную</a>
+            <a href="index.html"  class="Glavnaa">На главную</a>
         </div>
         
         </section>
