--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <br>
               <br>
               <footer>
-                <p>Сайт создан @moiseeff_ars with ❤️</p>
+                <p class="F">Сайт создан @moiseeff_ars with ❤️</p>
               </footer>
         </main>
     </body>
