--- a/404.html
+++ b/404.html
@@ -3,24 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ошибка 404</title>
-    <link rel="stylesheet" href="./404.css">
+    <title>Новости GS</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./News.css">
 </head>
 <body>
     <main>
-        <section>
-            <div>
-                <h1>404. Страница не найдена</h1>
-                <div class="hom">
-                <img src="https://media1.tenor.com/m/oSKKipnYg5MAAAAd/hamsti-hamster.gif" alt="" width="50%">
-            </div>
-                
-                <p>К сожалению, такой страницы нет. Возможно она удалена или никогда не существовала ранее.</p>
-                <br>
-                <br>
-                <p class="button_vverh"><a href="https://mars-tech-maker.github.io/final_project/">Перейти на главную</a></p>
+        <header>
+            <div class="container">
+            <h1><a class="G" href="file:///C:/Users/marsa/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/Web/final/final.html">Guitar Station</a></h1>
         </div>
+            <h2 class="Z">Новости сайта</h2>
+        </header>
+        <section>
+            <br>
+            <br>
+            <br>
+            <div class="c2">
+                <div class="c">
+                    <h2 class="Gl">28.05.2025</h2>
+                    <br>
+                    <p class="nahodka">Запущена страница <a href="file:///C:/Users/marsa/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/Web/final/News.html" class="N"> новостей</a>сайта Guitar Station.</p>
+                </div>
+            </div>
+            <br>
+
+
+
+            <div class="c2">
+                <div class="c">
+                    <h2 class="Gl">27.05.2025</h2>
+                    <br>
+                    <p class="nahodka">Запущен собственный <a href="file:///C:/Users/marsa/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/Web/final/Obzor.html" class="N"> гитарный блог.</a></p>
+                </div>
+            </div>
+            <br>
+
+            <div class="c2">
+            <div class="c">
+                <h2 class="Gl">22.05.2025</h2>
+                <br>
+                <p class="nahodka">Запущена <a href="file:///C:\Users\marsa\OneDrive\Рабочий стол\Web\final/final.html" class="N">главная</a> страница сайта Guitar Station.</p>
+            </div>
+        </div>
+        <br>
+        <!--сюда вставлять последующий новостной блок-->
+        <br>
+        <br>
+        <div class="knopka">
+            <a href="C:\Users\marsa\OneDrive\Рабочий стол\Web\final\final.html"  class="Glavnaa">На главную</a>
+        </div>
+        <br>
+        <br>
+        <br>
         </section>
     </main>
+    <footer>
+        <p>Сайт создан @moiseeff_ars with ❤️</p>
+      </footer>
 </body>
 </html>
