--- a/News.html
+++ b/News.html
@@ -53,8 +53,13 @@
         <div class="knopka">
             <a href="index.html"  class="Glavnaa">На главную</a>
         </div>
-        
+        <br>
+        <br>
+        <br>
         </section>
     </main>
+    <footer>
+        <p>Сайт создан @moiseeff_ars with ❤️</p>
+      </footer>
 </body>
 </html>
