--- a/News.html
+++ b/News.html
@@ -59,7 +59,7 @@
         </section>
     </main>
     <footer>
-        <p>Сайт создан @moiseeff_ars with ❤️</p>
+        <p class="nahodka">Сайт создан @moiseeff_ars with ❤️</p>
       </footer>
 </body>
 </html>
