--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p class="nahodka">Добро пожаловать на Guitar Station!</p>
                 <p class="nahodka">На сайте вы найдёте:</p>
                 <li class="nahodka"><a href="Obzor.html" class="N">Обзоры гитар и оборудования</a>(каталог интересных и раритетных гитарок)</li>
-                <li class="nahodka"><a href="404.html" class="N">Эволюция гитары</a></li>
+                <li class="nahodka"><a href="404.html" class="N">Истории гитаристов</a></li>
                 <li class="nahodka"><a href="404.html" class="N">Собрание аккордов</a> (которое я буду периодически пополнять, когда вспомню, как они берутся. Пока есть только E, потому что он веселый, как я, когда пишу этот сайт.)</li>
                 </div>
                 <br class="NO">
